Aress7/src/objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installer</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Groundsworker</fullName>
                </value>
                <value>
                    <fullName>Electricians Mate</fullName>
                </value>
                <value>
                    <fullName>Aero Installer</fullName>
                </value>
                <value>
                    <fullName>CPD</fullName>
                </value>
                <value>
                    <fullName>Senior Installer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>Role__c</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedBy</columns>
        <columns>Id</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ResourceType</field>
            <operation>equals</operation>
            <value>T</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Pod_Point_PPE_GW</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>Role__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>Id</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ResourceType</field>
            <operation>equals</operation>
            <value>T</value>
        </filters>
        <filters>
            <field>Role__c</field>
            <operation>equals</operation>
            <value>Installer,Regional Manager,Groundsworker,Electricians Mate,Senior Installer</value>
        </filters>
        <label>All Pod Point PPE &amp; GW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Service_Resources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <columns>Role__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Resources</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>true</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>